--- a/TravelB/src/main/resources/templates/ok.html
+++ b/TravelB/src/main/resources/templates/ok.html
@@ -8,14 +8,14 @@
 		
 		
 		
-		<div th:text="${travel.id}"></div>
-		<div th:text="${travel.name}"></div>
-		<div th:text="${travel.town}"></div>		
-		<div th:text="${travel.address}"></div>
-		<div th:text="${travel.tel}"></div>
-		<div th:text="${travel.ticket}"></div>
-		<div th:text="${travel.introduce}"></div>	
-		<img th:src="${travel.picture}"></div>
+		
+		地點<div th:text="${travel.name}"></div>
+		區域<div th:text="${travel.town}"></div>		
+		地址<div th:text="${travel.address}"></div>
+		電話<div th:text="${travel.tel}"></div>
+		門票資訊<div th:text="${travel.ticket}"></div>
+		介紹<div th:text="${travel.introduce}"></div>	
+		圖片<img th:src="${travel.picture}"></div>
 		
 </body>
 </html>
