--- a/TravelB/src/main/resources/templates/ok.html
+++ b/TravelB/src/main/resources/templates/ok.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="BIG5">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
@@ -9,13 +9,13 @@
 		
 		
 		
-		¦aÂI<div th:text="${travel.name}"></div>
-		°Ï°ì<div th:text="${travel.town}"></div>		
-		¦a§}<div th:text="${travel.address}"></div>
-		¹q¸Ü<div th:text="${travel.tel}"></div>
-		ªù²¼¸ê°T<div th:text="${travel.ticket}"></div>
-		¤¶²Ð<div th:text="${travel.introduce}"></div>	
-		¹Ï¤ù<img th:src="${travel.picture}"></div>
+		åœ°é»ž<div th:text="${travel.name}"></div>
+		å€åŸŸ<div th:text="${travel.town}"></div>		
+		åœ°å€<div th:text="${travel.address}"></div>
+		é›»è©±<div th:text="${travel.tel}"></div>
+		é–€ç¥¨è³‡è¨Š<div th:text="${travel.ticket}"></div>
+		ä»‹ç´¹<div th:text="${travel.introduce}"></div>	
+		åœ–ç‰‡<img th:src="${travel.picture}"></div>
 		
 </body>
 </html>
