--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -93,8 +93,12 @@
                         </div>
                     </div>
                     <a href="contact" class="nav-item nav-link">Contact</a>
+                    <a href="/travel/members/register" class="nav-item nav-link">註冊</a>
                 </div>
-                <a href="login" class="btn btn-primary rounded-pill py-2 px-4">會員登錄</a>
+              
+                    <a href="login" class="btn btn-primary rounded-pill py-2 px-4">會員登錄</a>
+                
+              
             </div>
         </nav>
 
@@ -697,6 +701,7 @@
 
 
     <!-- JavaScript Libraries -->
+    <script src="../static/js/register.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
