--- a/TravelB/src/main/resources/static/css/style.css
+++ b/TravelB/src/main/resources/static/css/style.css
@@ -441,3 +441,5 @@
     padding-right: 0;
     border-right: none;
 }
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
