--- a/TravelB/src/main/resources/static/css/register.css
+++ b/TravelB/src/main/resources/static/css/register.css
@@ -1,77 +1,56 @@
-.wrap {
-    text-align: center;
-    padding-top: 20%;
-  }
-  .btn {
-    background-color: #FFB80C;
-    text-decoration: none;
-    color: #1e1e1e;
-    padding: 16px;
-    border-radius: 5px;
-  }
-  
-  .popup-wrap {
-    width: 100%;
-    height: 100%;
-    display: none;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    content: '';
-    background: rgba(0, 0, 0, 0.85);
-  }
-  
-  .popup-box {
-    width: 50%;
-    padding: 50px 75px;
-    transform: translate(-50%, -50%) scale(0.5);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.5);
-    border-radius: 3px;
-    background: #fff;
-    text-align: center;
-  }
-  h2 {
-    font-size: 32px;
-    color: #1a1a1a;
-  }
-  
-  h3 {
-    font-size: 24px;
-    color: #888;
-  }
-  
-  .close-btn {
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border-radius: 100%;
-    background: #d75f70;
-    font-weight: bold;
-    text-decoration: none;
-    color: #fff;
-    line-height: 40px;
-    font-size: 32px;
-  }
-  
-  .transform-in, .transform-out {
-    display: block;
-    -webkit-transition: all ease 0.5s;
-    transition: all ease 0.5s;
-  }
-  
-  .transform-in {
-    -webkit-transform: translate(-50%, -50%) scale(1);
-    transform: translate(-50%, -50%) scale(1);
-  }
-  
-  .transform-out {
-    -webkit-transform: translate(-50%, -50%) scale(0.5);
-    transform: translate(-50%, -50%) scale(0.5);
-  }
-  
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
