--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -93,7 +93,8 @@
                         </div>
                     </div>
                     <a href="contact" class="nav-item nav-link">Contact</a>
-                    <a href="/travel/members/register" class="nav-item nav-link">註冊</a>
+                    <a href="login" class="nav-item nav-link">註冊</a>
+    
                 </div>
               
                     <a href="login" class="btn btn-primary rounded-pill py-2 px-4">會員登錄</a>
@@ -647,7 +648,7 @@
                         </div>
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
-                        </div>
+                       </div>
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
                         </div>
@@ -701,7 +702,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="../static/js/register.js"></script>
+  
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
