--- a/TravelB/src/main/resources/static/css/style.css
+++ b/TravelB/src/main/resources/static/css/style.css
@@ -27,7 +27,7 @@
 #spinner {
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    /transition: opacity .5s ease-out, visibility 0s linear .5s;
     z-index: 99999;
 }
 
