--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -75,7 +75,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a th:href="@{'/index'}" class="nav-item nav-link active">首頁</a>
+                    <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
                     <a th:href="@{'/find'}" class="nav-item nav-link"  >商品資訊</a>
                     <a href="service" class="nav-item nav-link">Services</a>
                     <a href="package" class="nav-item nav-link">分類</a>
@@ -105,7 +105,7 @@
                         <p class="fs-4 text-white mb-4 ">Tempor erat elitr rebum at clita diam amet diam et eos erat ipsum lorem sit</p>
                         <div class="position-relative w-75 mx-auto ">
                             <form method="post">
-                            <input name="travelId"  class="border-0 rounded-pill w-100 py-3 ps-4 pe-5" style="margin-top: 7px;" />
+                            <input name="travelId"  class="border-0 rounded-pill w-100 py-3 ps-4 pe-5" style="margin-top: 7px;" placeholder="請輸入想要搜尋的縣市" />
                             <button class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2" style="margin-top: 15px;">Search</button>
                             </form>
                         </div>
