--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -79,8 +79,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index" class="nav-item nav-link active">首頁</a>
-                    <a href="find" class="nav-item nav-link"  >商品資訊</a>
+                    <a href="index" class="nav-item nav-link ">首頁</a>
+                    <a href="find" class="nav-item nav-link "  >商品資訊</a>
                     <a href="service" class="nav-item nav-link">Services</a>
                     <a href="package" class="nav-item nav-link">分類</a>
                     <div class="nav-item dropdown">
