--- a/TravelB/src/main/resources/templates/ok.html
+++ b/TravelB/src/main/resources/templates/ok.html
@@ -10,27 +10,27 @@
     
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link th:href="@{/img/favicon.ico}" rel="icon">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect"  th:href="@{https://fonts.googleapis.com}">
+    <link rel="preconnect"  th:href="@{https://fonts.gstatic.com}" crossorigin>
+    <link  th:href="@{https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap}" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link  th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}" rel="stylesheet">
+    <link  th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css}" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
+  <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
+  <link th:href="@{/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" rel="stylesheet">
     
 
 <style type="text/css">
@@ -87,8 +87,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index" class="nav-item nav-link active">首頁</a>
-                    <a href="about" class="nav-item nav-link">商品資訊</a>
+                    <a href="index" class="nav-item nav-link">首頁</a>
+                    <a href="find" class="nav-item nav-link">商品資訊</a>
                     <a href="service" class="nav-item nav-link">Services</a>
                     <a href="package" class="nav-item nav-link">分類</a>
                     <div class="nav-item dropdown">
@@ -115,7 +115,7 @@
                         <p class="fs-4 text-white mb-4 animated slideInDown">Tempor erat elitr rebum at clita diam amet diam et eos erat ipsum lorem sit</p>
                         <div class="position-relative w-75 mx-auto animated slideInDown">
                             <form method="post">
-                            <input name="travelId"  class="border-0 rounded-pill w-100 py-3 ps-4 pe-5" style="margin-top: 7px;" />
+                            <input name="travelId"  class="border-0 rounded-pill w-100 py-3 ps-4 pe-5" style="margin-top: 7px;" placeholder="請輸入想要搜尋的縣市" />
                             <button class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2" style="margin-top: 15px;">Search</button>
                             </form>
                         </div>
@@ -125,30 +125,6 @@
         </div>
     </div>
     <!-- Navbar & Hero End -->
-
-<div th:if ="${totalPages > 1}">
-		<div class ="row col-sm-10">
-		<div class ="col-sm-2">
-			Total Rows: [[${totalItems}]]
-		</div>
-		<div class ="col-sm-1">
-			<span th:each="i:${#numbers.sequence(1, totalPages)}">
-			<a th:if="${currentPage != i}" th:href="@{'/ok/'+${i}}">[[${i}]]</a>
-			<span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp;&nbsp;
-			</span>
-		</div>
-		<div class	="col-sm-1">
-		<a th:if="${currentPage < totalPages}" th:href="@{'/ok/'+${currentPage + 1}}">Next</a>
-		<span th:unless="${currentPage < totalPages}">Next</span>
-		</div>
-		<div class	="col-sm-1">
-		<a th:if="${currentPage < totalPages}" th:href="@{'/ok/'+${currentPage}}">Last</a>
-		<span th:unless="${currentPage < totalPages}">Last</span>
-		</div>				
-		</div>
-</div>
-
-
 
    <table>
     <colgroup span="8"></colgroup>
@@ -178,18 +154,18 @@
     
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/lib/wow/wow.min.js}"></script>
+    <script th:src="@{/lib/easing/easing.min.js}"></script>
+    <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
+    <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
+    <script th:src="@{/lib/tempusdominus/js/moment.min.js}"></script>
+    <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
+    <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script th:src="@{/js/main.js}"></script>
 </body>
 
 </html>
