--- a/TravelB/src/main/resources/templates/login.html
+++ b/TravelB/src/main/resources/templates/login.html
@@ -29,7 +29,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">\
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -101,27 +104,53 @@
         <div class="container-fluid bg-primary py-5 mb-5 hero-header">
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
-                    <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
+                    <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s"><!--col-lg-10 pt-lg-5 mt-lg-5 text-center-->
                         <h1 class="display-3 text-white animated slideInDown">會員註冊</h1>
-                        <form>
+                        <form >
                             <div class="row g-3">
-                                <div class="col-md-6">
+                                <div class="col-12">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="信箱">
+                                        <input type="email" class="form-control" id="email" placeholder="email">
                                         <label for="email">Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="password" class="form-control" id="password" placeholder="密碼">
-                                        <label for="password">password</label>
+                                        <P id="text" style="color: red;"></P>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <button id="btnPostUser" class="btn btn-primary w-100 py-3" type="submit" onclick="login()">註冊</button>
+                                    <div class="form-floating">
+                                        <input type="password" class="form-control" id="password" placeholder="password">
+                                        <label for="password">password</label>
+                                    </div>
                                 </div>
+                                
                             </div>
                         </form>
+                        <div class="col-12">
+                            <button id="btnPostUser" class="btn btn-primary w-100 py-3" type="submit" onclick="login()">註冊</button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">    <!--col-lg-3 col-md-6-->
+                <h4 class="text-white mb-3">Gallery</h4>
+                <div class="row g-2 pt-2">
+                    <div class="col-4">
+                        <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -157,29 +186,7 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Gallery</h4>
-                    <div class="row g-2 pt-2">
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
@@ -205,7 +212,7 @@
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
-                            <a href="http://127.0.0.1:8080/travel/members/register">測試</a>
+                        
                         </div>
                     </div>
                 </div>
@@ -234,7 +241,7 @@
     <script src="js/main.js"></script>
 
     <script>
-    
+
 </script>
 </body>
 
