註冊/登入後會跳轉畫面...session 未完成

--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index" class="nav-item nav-link ">首頁</a>
+                    <a href="index" class="nav-item nav-link active">首頁</a>
                     <a href="find" class="nav-item nav-link "  >商品資訊</a>
                     <a href="service" class="nav-item nav-link">Services</a>
                     <a href="package" class="nav-item nav-link">分類</a>
@@ -94,11 +94,11 @@
                         </div>
                     </div>
                     <a href="contact" class="nav-item nav-link">Contact</a>
-                    <a href="login" class="nav-item nav-link">註冊</a>
+                    <a href="register" class="nav-item nav-link">註冊</a>
     
                 </div>
               
-                    <a href="login" class="btn btn-primary rounded-pill py-2 px-4">會員登錄</a>
+                    <a href="login" class="btn btn-primary rounded-pill py-2 px-4">登入</a>
                 
               
             </div>
