--- a/TravelB/src/main/resources/templates/login.html
+++ b/TravelB/src/main/resources/templates/login.html
@@ -95,9 +95,10 @@
                             <a href="404" class="dropdown-item">404 Page</a>
                         </div>
                     </div>
-                    <a onclick="" href="contact" class="nav-item nav-link active">Contact</a>
+                    <a onclick="" href="contact" class="nav-item nav-link">Contact</a>
+                    <a href="register" class="nav-item nav-link">註冊</a>
                 </div>
-                <a href="login" class="btn btn-primary rounded-pill py-2 px-4">Register</a>
+                <a href="login" class="btn btn-primary rounded-pill py-2 px-4 active">登入</a>
             </div>
         </nav>
 
@@ -105,7 +106,7 @@
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s"><!--col-lg-10 pt-lg-5 mt-lg-5 text-center-->
-                        <h1 class="display-3 text-white animated slideInDown">會員註冊</h1>
+                        <h1 class="display-3 text-white animated slideInDown">登入</h1>
                         <form >
                             <div class="row g-3">
                                 <div class="col-12">
@@ -125,7 +126,7 @@
                             </div>
                         </form>
                         <div class="col-12">
-                            <button id="btnPostUser" class="btn btn-primary w-100 py-3" type="submit" onclick="login()">註冊</button>
+                            <button id="btnPostUser" class="btn btn-primary w-100 py-3" type="submit" onclick="login()">下一步</button>
                         </div>
                     </div>
                     
