--- a/TravelB/src/main/resources/templates/register.html
+++ b/TravelB/src/main/resources/templates/register.html
@@ -140,11 +140,11 @@
                                     </div>
                                 </section>
                                 
-                                <section class="form-link">
+                                <sectio class="form-link">
                                     <span>已經有帳號?</span><a th:href="@{/login}">立即登入</a>
-                                </section>
+                                </sectio>
                             </form>
-                            <button type="submit" id="btnPostUser" onclick="register()">註冊</button>
+                            <button  type="submit" id="btnPostUser" onclick="register()">註冊</button>
                         </section>
                     </div>
 
