--- a/TravelB/src/main/resources/templates/memberCentre.html
+++ b/TravelB/src/main/resources/templates/memberCentre.html
@@ -143,7 +143,7 @@
                                     <label class="text">姓名</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        <input type="text" id="name" name="name" placeholder="請輸入" />
+                                        <input type="text" id="name" name="name" th:value="${session.loginEmail.name}" placeholder="請輸入" />
                                     </div>
                                 </div>
                                 <!-- <div class="w3l-grid2">
@@ -160,7 +160,7 @@
                                     <label class="text">性別</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-users" aria-hidden="true"></i>
-                                        <select id="gender" class="form-control" required="" name="gender">
+                                        <select id="gender" class="form-control" required="" name="gender" th:value="${session.loginEmail.gender}">
                                             <option>性別</option>
                                             <option>男性</option>
                                             <option>女性</option>
@@ -172,7 +172,7 @@
                                     <div class="w3l-div">
                                         <i class="fa fa-calendar" aria-hidden="true"></i>
                                         <input type="text" id="birthday" name="birthday" placeholder="yyyy-MM-dd" min="1900-01-01"
-                                            required pattern="\d{4}-\d{2}-\d{2}" />
+                                            required pattern="\d{4}-\d{2}-\d{2}" th:value="${session.loginEmail.birthday}"  />
                                         <!-- id="datepicker"  -->
                                     </div>
                                 </div>
@@ -183,14 +183,14 @@
                                     <label class="text">電子信箱</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                        <input type="email" id="email" name="email" th:value="${session.loginEmail}" required="" />
+                                        <input type="email" id="email" name="email" th:value="${session.loginEmail.email}" required="" />
                                     </div>
                                 </div>
                                 <div class="w3l-grid2">
                                     <label class="text">電話號碼</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-phone" aria-hidden="true"></i>
-                                        <input type="text" id="phone" name="phone" placeholder="電話請輸入" required="" />
+                                        <input type="text" id="phone" name="phone" placeholder="電話請輸入" th:value="${session.loginEmail.phone}" required="" />
                                     </div>
                                 </div>
                                 <div class="clear"></div>
@@ -200,7 +200,7 @@
                                     <label class="text">地址</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-location-arrow" aria-hidden="true"></i>
-                                        <input type="text" id="address" name="address" placeholder="地址請輸入" required="" />
+                                        <input type="text" id="address" name="address" placeholder="地址請輸入" th:value="${session.loginEmail.address}" required="" />
                                     </div>
                                 </div>
                                 <div class="w3l-grid2">
