--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -104,20 +104,11 @@
                     </div>
                     <a href="contact" class="nav-item nav-link">Contact</a>
                     
-                    
-                    
-                    <a th:if="${session.loginEmail ==  null}" href="register" class="nav-item nav-link" id="check">註冊</a>
-                                		
-               		  <div th:if="${session.loginEmail !=  null}" class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><img th:src="@{/images/person.png}"></a>
-                        <span class="dropdown-menu m-0">
-                            <a href="destination" class="dropdown-item">會員中心</a>
-                            <a href="http://localhost:8080/travel/logout" class="dropdown-item">登出</a>
-                        </span>
-                         </div>
-                    </div>
-
-               	<a th:if="${session.loginEmail ==  null}" href="login" class="btn btn-primary rounded-pill py-2 px-4" id="checklogin">登入</a>
+         		
+                         
+                      </div>
+                 
+            
             </div>
         </nav>
 
@@ -708,9 +699,8 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
-        <script>
+        <script src="js/session.js"></script>
         
-        </script>
 </body>
 
 </html>
