--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -45,7 +45,7 @@
 
     <!-- Template Javascript -->
     <script th:src="@{/js/main.js}"></script>
-
+	<script th:src="@{/js/session.js}"></script>
     <style type="text/css">
         .img-fluid {
             max-width: 600px;
@@ -109,7 +109,7 @@
                 <div class="nav-item dropdown">
                 </div>
             </div>
-            <a href="login" class="btn btn-primary rounded-pill py-2 px-4">會員登錄</a>
+          
         </div>
     </nav>
 
