--- a/TravelB/src/main/resources/templates/memberCentre.html
+++ b/TravelB/src/main/resources/templates/memberCentre.html
@@ -183,7 +183,7 @@
                                     <label class="text">電子信箱</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                        <input type="email" id="email" name="email" th:value="${session.loginEmail}" required="" />
+                                        <input type="email" id="email" name="email" th:value="${session.loginEmail.getEmail}" required="" />
                                     </div>
                                 </div>
                                 <div class="w3l-grid2">
