購物清單未完成2

--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -162,9 +162,9 @@
                         <small class="flex-fill text-center border-end py-2"><i
                                 class="fa fa-map-marker-alt text-primary me-2"></i><span
                                 th:text="${travel.name}"></span></small>
-                        <small class="flex-fill text-center py-2"><i
+                        <small id="travelvalue" class="flex-fill text-center py-2"><i
                                 class="fa fa-user text-primary me-2"></i><span
-                                th:text="${travel.tel}"></span></small>
+                                th:text="${travel.id}"></span></small>
                     </div>
                     <div class="text-center p-4">
                         <h3 class="mb-0"><span
