--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -81,7 +81,7 @@
 </head>
 
 
-<body>
+<div>
 <!-- Spinner Start -->
 <div id="spinner"
      class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -144,51 +144,11 @@
 <!--</div>-->
 
 <!-- 商品資訊 -->
-
 <div class="container-xxl py-5">
-    <div1 class="row col-*-* gy-8 gx-4 justify-content-center">
-            <tr th:each="travel : ${listTravel }">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
-                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-                <div class="package-item">
-                    <div class="overflow-hidden">
-                        <img class="img-fluid" th:src="${travel.picture}" alt="">
-                    </div>
-                    <div class="d-flex border-bottom">
-                        <small class="flex-fill text-center border-end py-2"><i
-                                class="fa fa-map-marker-alt text-primary me-2"></i><span
-                                th:text="${travel.town}"></span></small>
+<div id="info" class="row col-*-* gy-8 gx-4 justify-content-center"></div>
 
-                        <small class="flex-fill text-center border-end py-2"><i
-                                class="fa fa-map-marker-alt text-primary me-2"></i><span
-                                th:text="${travel.name}"></span></small>
-                        <small id="travelvalue" class="flex-fill text-center py-2"><i
-                                class="fa fa-user text-primary me-2"></i><span
-                                th:text="${travel.id}"></span></small>
-                    </div>
-                    <div class="text-center p-4">
-                        <h3 class="mb-0"><span
-                                th:text="${travel.ticket}"></span></h3>
-                        <div class="mb-3">
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                            <small class="fa fa-star text-primary"></small>
-                        </div>
-                        <p1><span class="overflow-auto" th:text="${travel.introduce}" ></span></p1>
-                        <div class="d-flex justify-content-center mb-2">
-                            <button onclick="myFunction()"  class="btn btn-sm btn-primary px-3 border-end"
-                               style="border-radius: 30px 0 0 30px;">購買
-                                </button>
-                        </div>
-                    </div>
-                </div>
-                </div>
 
-            </tr>
-    </div1>
-</div>
+
 
 
 <div>&nbsp;</div>
@@ -236,3 +196,66 @@
 
 <!--    </tr>-->
 <!--</table>-->
+
+
+<script>
+$.ajax({
+    method: "get",
+    url: "/travel/findList",
+    success:function(data) {
+		console.log(data);
+        getInfo(data);
+    }
+  });
+  
+ 
+
+function getInfo(data) {
+    var html = "";
+    $.each(data, function(index, item)  {
+        console.log(item);
+
+
+    html += `
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
+                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                <div class="package-item">
+                    <div class="overflow-hidden">
+                        <img class="img-fluid" src="${item.picture}" alt="">
+                    </div>
+                    <div class="d-flex border-bottom">
+                        <small class="flex-fill text-center border-end py-2"><i
+                                class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span ${item.town}</span></small>
+
+                        <small class="flex-fill text-center border-end py-2"><i
+                                class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span>${item.address}</span></small>
+                        <small  class="flex-fill text-center py-2"><i
+                        		id="travelvalue"
+                                class="fa fa-user text-primary me-2"></i
+                                ><span>${item.id}</span></small>
+                    </div>
+                    <div class="text-center p-4">
+                        <h3 class="mb-0"><span>${item.ticket}</span></h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                        </div>
+                        <p1><span class="overflow-auto">${item.introduce}</span></p1>
+                        <div class="d-flex justify-content-center mb-2">
+                            <button onclick="myFunction()"  class="btn btn-sm btn-primary px-3 border-end"
+                               style="border-radius: 30px 0 0 30px;">購買
+                                </button>
+                        </div>
+                    </div>
+                </div>
+                </div>`;
+
+            })
+    $("#info").append(html);
+}
+</script>
